NXP-32438: Remove deprecated code in Nuxeo Routing